const Utils = require('../utils')

describe('Customer Screen Tests', () => {
  before(async () => {
    await device.reloadReactNative()
    await Utils.loginAsUser()
  })
  after(async () => {
    await Utils.goBack()
    await Utils.goBack()
    await Utils.logout()
  })

  beforeEach(async () => {
    await device.reloadReactNative()
    await navigateToCustomerScreen()
  })

  const navigateToCustomerScreen = async () => {
    await expect(element(by.id('launchScreen'))).toBeVisible()
    await element(by.id('menuButton')).tap()
    await element(by.id('entitiesDrawerButton')).tap()
    await Utils.scrollTo('customerEntityScreenButton', 'entityScreenScrollList')
    await element(by.id('customerEntityScreenButton')).tap()
  }

  it('should allow you to create an entity', async () => {
    await expect(element(by.id('customerScreen'))).toBeVisible()
    await expect(element(by.text('Create'))).toBeVisible()
    // create
    await element(by.id('customerCreateButton')).tap()
    await Utils.scrollTo('noIdentificationInput', 'customerEditScrollView')
    await element(by.id('noIdentificationInput')).replaceText('123')
    await Utils.scrollTo('companyNameInput', 'customerEditScrollView')
    await element(by.id('companyNameInput')).replaceText('sample-data')
    await Utils.scrollTo('firstNameInput', 'customerEditScrollView')
    await element(by.id('firstNameInput')).replaceText('sample-data')
    await Utils.scrollTo('lastNameInput', 'customerEditScrollView')
    await element(by.id('lastNameInput')).replaceText('sample-data')
    await Utils.scrollTo('addressInput', 'customerEditScrollView')
    await element(by.id('addressInput')).replaceText('sample-data')
    await Utils.scrollTo('cityInput', 'customerEditScrollView')
    await element(by.id('cityInput')).replaceText('sample-data')
    await Utils.scrollTo('phoneInput', 'customerEditScrollView')
    await element(by.id('phoneInput')).replaceText('sample-data')
    await Utils.scrollTo('cellPhoneInput', 'customerEditScrollView')
    await element(by.id('cellPhoneInput')).replaceText('sample-data')
    await Utils.scrollTo('emailInput', 'customerEditScrollView')
    await element(by.id('emailInput')).replaceText('sample-data')
    await Utils.scrollTo('useridInput', 'customerEditScrollView')
    await element(by.id('useridInput')).replaceText('123')
    await element(by.id('submitButton')).tap()
    await element(by.text('View')).tap()
    await Utils.scrollTo('noIdentification', 'customerDetailScrollView')
    await expect(element(by.id('noIdentification'))).toHaveText('NoIdentification: 123')
    await Utils.scrollTo('companyName', 'customerDetailScrollView')
    await expect(element(by.id('companyName'))).toHaveText('CompanyName: sample-data')
    await Utils.scrollTo('firstName', 'customerDetailScrollView')
    await expect(element(by.id('firstName'))).toHaveText('FirstName: sample-data')
    await Utils.scrollTo('lastName', 'customerDetailScrollView')
    await expect(element(by.id('lastName'))).toHaveText('LastName: sample-data')
    await Utils.scrollTo('address', 'customerDetailScrollView')
    await expect(element(by.id('address'))).toHaveText('Address: sample-data')
    await Utils.scrollTo('city', 'customerDetailScrollView')
    await expect(element(by.id('city'))).toHaveText('City: sample-data')
    await Utils.scrollTo('phone', 'customerDetailScrollView')
    await expect(element(by.id('phone'))).toHaveText('Phone: sample-data')
    await Utils.scrollTo('cellPhone', 'customerDetailScrollView')
    await expect(element(by.id('cellPhone'))).toHaveText('CellPhone: sample-data')
    await Utils.scrollTo('email', 'customerDetailScrollView')
    await expect(element(by.id('email'))).toHaveText('Email: sample-data')
    await Utils.scrollTo('userid', 'customerDetailScrollView')
    await expect(element(by.id('userid'))).toHaveText('Userid: 123')
    // update
    await element(by.text('EDIT')).tap()
    await Utils.scrollTo('noIdentificationInput', 'customerEditScrollView')
    await element(by.id('noIdentificationInput')).replaceText('1234')
    await Utils.scrollTo('companyNameInput', 'customerEditScrollView')
    await element(by.id('companyNameInput')).replaceText('sample-data-2')
    await Utils.scrollTo('firstNameInput', 'customerEditScrollView')
    await element(by.id('firstNameInput')).replaceText('sample-data-2')
    await Utils.scrollTo('lastNameInput', 'customerEditScrollView')
    await element(by.id('lastNameInput')).replaceText('sample-data-2')
    await Utils.scrollTo('addressInput', 'customerEditScrollView')
    await element(by.id('addressInput')).replaceText('sample-data-2')
    await Utils.scrollTo('cityInput', 'customerEditScrollView')
    await element(by.id('cityInput')).replaceText('sample-data-2')
    await Utils.scrollTo('phoneInput', 'customerEditScrollView')
    await element(by.id('phoneInput')).replaceText('sample-data-2')
    await Utils.scrollTo('cellPhoneInput', 'customerEditScrollView')
    await element(by.id('cellPhoneInput')).replaceText('sample-data-2')
    await Utils.scrollTo('emailInput', 'customerEditScrollView')
    await element(by.id('emailInput')).replaceText('sample-data-2')
    await Utils.scrollTo('useridInput', 'customerEditScrollView')
    await element(by.id('useridInput')).replaceText('1234')
    await element(by.id('submitButton')).tap()
    await element(by.text('OK')).tap()
    await expect(element(by.id('noIdentification'))).toHaveText('NoIdentification: 1234')
    await expect(element(by.id('companyName'))).toHaveText('CompanyName: sample-data-2')
    await expect(element(by.id('firstName'))).toHaveText('FirstName: sample-data-2')
    await expect(element(by.id('lastName'))).toHaveText('LastName: sample-data-2')
    await expect(element(by.id('address'))).toHaveText('Address: sample-data-2')
    await expect(element(by.id('city'))).toHaveText('City: sample-data-2')
    await expect(element(by.id('phone'))).toHaveText('Phone: sample-data-2')
    await expect(element(by.id('cellPhone'))).toHaveText('CellPhone: sample-data-2')
    await expect(element(by.id('email'))).toHaveText('Email: sample-data-2')
    await expect(element(by.id('userid'))).toHaveText('Userid: 1234')
    // delete
    await element(by.text('DELETE')).tap()
    await element(by.text('OK')).tap()
    await expect(element(by.id('customerScreen'))).toBeVisible()
  })
})
